syntax = "proto3";

option java_multiple_files = true;
option java_package = "bikes.grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service Bikes {
  rpc GetAllStream (google.protobuf.Empty) returns (stream Bike);
  rpc GetAll (google.protobuf.Empty) returns (BikeList);

  rpc GetByLocationStream (google.protobuf.StringValue) returns (stream Bike);
  rpc GetByLocation (google.protobuf.StringValue) returns (BikeList);

  rpc GetById (google.protobuf.Int32Value) returns (Bike);
  rpc UpdateById (BikeRequest) returns (Bike);
  rpc Create (BikeRequest) returns (Bike);

  rpc DeleteById (google.protobuf.Int32Value) returns (google.protobuf.Empty);
  rpc DeleteAll (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc DeleteByLocation (google.protobuf.StringValue) returns (google.protobuf.Empty);

}

message BikeRequest{
  int32 id = 1;
  string stationId = 2;
  optional double rating = 3;
  optional int64 totalTimeRented = 4;
}

message Bike{
  int32 id = 1;
  string stationId = 2;
  double rating = 3;
  int32 timesRated = 4;
  int32 timesRented = 5;
  int64 totalTimeRented = 6;
}

message BikeList {
  repeated Bike bikes = 1;
}
